Add class to timecode subtitle.

--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
                     <div class="uk-countdown-separator">:</div>
                     <div>
                         <div class="uk-countdown-number" id="timer-minute">00</div>
-                        <div class="uk-margin-small uk-text-center uk-visible@s">Minutes</div>
+                        <div class="uk-countdown-label uk-margin-small uk-text-center uk-visible@s">Minutes</div>
                     </div>
                     <div class="uk-countdown-separator">:</div>
                     <div>
                         <div class="uk-countdown-number" id="timer-second">00</div>
-                        <div class="uk-margin-small uk-text-center uk-visible@s">Seconds</div>
+                        <div class="uk-countdown-label uk-margin-small uk-text-center uk-visible@s">Seconds</div>
                     </div>
                     <div class="uk-countdown-separator" id="timer-dropframe">:</div>
                     <div>
                         <div class="uk-countdown-number" id="timer-frame">00</div>
-                        <div class="uk-margin-small uk-text-center uk-visible@s">Frames</div>
+                        <div class="uk-countdown-label uk-margin-small uk-text-center uk-visible@s">Frames</div>
                     </div>
                 </div>
             </div>
