--- a/timememe.html
+++ b/timememe.html
@@ -64,7 +64,37 @@
                 <progress id="data-progress" class="uk-progress" value="0" max="100"></progress>
             </div>
         </div>
-        <div class="uk-container uk-container-expand uk-light" uk-height-viewport="expand: true">
+        <div class="uk-section" uk-height-viewport="expand: true"></div>
+        <div class="uk-section uk-section-xsmall uk-text-center">
+            <div class="uk-container uk-container-small">
+                <div class="uk-grid-collapse uk-child-width-1-3@s" uk-grid>
+                    <div>
+                        <div class="uk-tile uk-tile-muted uk-padding-small">
+                            <h4 class="uk-h4">TimeLord Server</h4>
+                            <code id="TIMELORD_IP"></code>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="uk-tile uk-tile-muted uk-padding-small">
+                            <h4 class="uk-h4">Websocket Port</h4>
+                            <code id="TIMELORD_PORT"></code>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="uk-tile uk-tile-muted uk-padding-small">
+                            <h4 class="uk-h4">Refresh on failure</h4>
+                            <code id="REFRESH"></code>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="uk-section">
+            <div class="uk-container uk-container-small uk-flex-center">
+                <button class="uk-button uk-width-1-1">
+                    Modify Settings
+                </button>
+            </div>
         </div>
         <script src="dist/app.js"></script>
     </body>
