--- a/timememe.html
+++ b/timememe.html
@@ -64,10 +64,15 @@
                 <progress id="data-progress" class="uk-progress" value="0" max="100"></progress>
             </div>
         </div>
-        <div class="uk-section" uk-height-viewport="expand: true"></div>
+        <div class="uk-section" uk-height-viewport="expand: true">
+            <div class="uk-container">
+                <pre id="debug-content" style="display:none;">
+                </pre>
+            </div>
+        </div>
         <div class="uk-section uk-section-xsmall uk-text-center">
             <div class="uk-container uk-container-small">
-                <div class="uk-grid-collapse uk-child-width-1-3@s" uk-grid>
+                <div class="uk-grid-collapse uk-child-width-1-4@s" uk-grid>
                     <div>
                         <div class="uk-tile uk-tile-muted uk-padding-small">
                             <h4 class="uk-h4">TimeLord Server</h4>
@@ -86,16 +91,22 @@
                             <code id="REFRESH"></code>
                         </div>
                     </div>
+                    <div>
+                        <div class="uk-tile uk-tile-muted uk-padding-small">
+                            <h4 class="uk-h4">Debug Mode</h4>
+                            <code id="DEBUG"></code>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="uk-section">
-            <div class="uk-container uk-container-small uk-flex-center">
-                <button class="uk-button uk-width-1-1">
-                    Modify Settings
-                </button>
-            </div>
-        </div>
+<!--        <div class="uk-section">-->
+<!--            <div class="uk-container uk-container-small uk-flex-center">-->
+<!--                <button class="uk-button uk-width-1-1">-->
+<!--                    Modify Settings-->
+<!--                </button>-->
+<!--            </div>-->
+<!--        </div>-->
         <script src="dist/app.js"></script>
     </body>
 </html>
