--- a/timememe.html
+++ b/timememe.html
@@ -87,7 +87,7 @@
                     </div>
                     <div>
                         <div class="uk-tile uk-tile-muted uk-padding-small">
-                            <h4 class="uk-h4">Refresh on failure</h4>
+                            <h4 class="uk-h4">Refresh on Failure</h4>
                             <code id="REFRESH"></code>
                         </div>
                     </div>
